dify-deploy/21-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker
  namespace: dify
  labels:
    app.kubernetes.io/name: worker
    app.kubernetes.io/part-of: dify
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: worker
        app.kubernetes.io/part-of: dify
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - api
                      - worker
              topologyKey: kubernetes.io/hostname
      containers:
        - name: worker
          image: langgenius/dify-api:1.13.0
          volumeMounts:
            - name: dify-storage
              mountPath: /app/api/storage
          resources:
            requests:
              memory: "384Mi"
              cpu: "50m"
            limits:
              memory: "1Gi"
              cpu: "500m"
      volumes:
        - name: dify-storage
          persistentVolumeClaim:
            claimName: dify-storage-pvc
