dify-deploy/22-worker-beat.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-beat
  namespace: dify
  labels:
    app.kubernetes.io/name: worker-beat
    app.kubernetes.io/part-of: dify
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: worker-beat
  template:
    metadata:
      labels:
        app.kubernetes.io/name: worker-beat
        app.kubernetes.io/part-of: dify
    spec:
      containers:
        - name: worker-beat
          image: langgenius/dify-api:1.13.0
          resources:
            requests:
              memory: "384Mi"
              cpu: "20m"
            limits:
              memory: "512Mi"
              cpu: "500m"
