dify-deploy/24-plugin-daemon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plugin-daemon
  namespace: dify
  labels:
    app.kubernetes.io/name: plugin-daemon
    app.kubernetes.io/part-of: dify
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: plugin-daemon
  template:
    metadata:
      labels:
        app.kubernetes.io/name: plugin-daemon
        app.kubernetes.io/part-of: dify
    spec:
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: app.kubernetes.io/name
                    operator: In
                    values:
                      - plugin-daemon
              topologyKey: kubernetes.io/hostname
      containers:
        - name: plugin-daemon
          image: langgenius/dify-plugin-daemon:0.5.3-local
          ports:
            - containerPort: 5002
              name: http
            - containerPort: 5003
              name: debug
          volumeMounts:
            - name: plugin-daemon-storage
              mountPath: /app/storage
          resources:
            requests:
              memory: "1Gi"
              cpu: "50m"
            limits:
              memory: "2Gi"
              cpu: "1000m"
      volumes:
        - name: plugin-daemon-storage
          persistentVolumeClaim:
            claimName: plugin-daemon-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: plugin-daemon
  namespace: dify
  labels:
    app.kubernetes.io/name: plugin-daemon
    app.kubernetes.io/part-of: dify
spec:
  type: ClusterIP
  ports:
    - port: 5002
      targetPort: 5002
      name: http
    - port: 5003
      targetPort: 5003
      name: debug
  selector:
    app.kubernetes.io/name: plugin-daemon
