dify-deploy/40-external-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gx10-656e
  namespace: dify
  annotations:
    tailscale.com/tailnet-fqdn: gx10-656e.tail4c949.ts.net
spec:
  externalName: placeholder   # any value - will be overwritten by operator
  type: ExternalName
