dify-deploy/31-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: dify
  labels:
    app.kubernetes.io/name: nginx
    app.kubernetes.io/part-of: dify
spec:
  ingressClassName: tailscale
  rules:
    - host: dify
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx
                port:
                  number: 80
  tls:
    - hosts:
        - dify
